[package]
name = "ghe"
version = "0.1.1"
edition = "2021"
license-file = "LICENSE"
description = "A simple tool to import and export gnome hotkeys"
homepage = "https://github.com/Yummiii/gnome-hotkey-export"
repository = "https://github.com/Yummiii/gnome-hotkey-export"
readme = "README.md"
keywords = ["ghe", "gnome", "hotkeys", "export", "import"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
command-macros = "0.2.9"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
glob = "0.3.0"