[package]
name = "ghe"
version = "0.1.4"
edition = "2021"
license-file = "LICENSE"
description = "A simple tool to import and export gnome hotkeys and extensions"
homepage = "https://github.com/Yummiii/gnome-hotkey-export"
repository = "https://github.com/Yummiii/gnome-hotkey-export"
readme = "README.md"
keywords = ["gnome", "hotkeys", "export", "import", "extensions"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
command-macros = "0.2.9"
serde = { version = "1.0.150", features = ["derive"] }
serde_json = "1.0.89"
glob = "0.3.0"
reqwest = { version = "0.11.13", default-features = false, features = [
    "rustls-tls",
] }
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }